# bike-comparator

./: .gitignore  CHANGELOG.md  DATABASE.md  README.md  app.py  bike_comparator.db  debug.html  debug_bd.html  export_data.py  main.py  pyproject.toml
backend/: ai_matcher.py  bd_products.csv  bi_matcher.py  bike_comparator.db  cr_products.csv  db.py  explore.ipynb  export_cr.py  filter_rules.py  main.py  matcher.py  models.py  mtb_matcher.py  rw_matcher.py  seed_rules.py
backend/scrapers/: bike_discount.py  bikeinn.py  centrum_rowerowe.py  mtbiker.py  rowerowy.py
data/: bi_matched.csv  cr_all.csv  matched_products.csv  mtb_matched.csv  rw_matched.csv
